--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "es2021": true
     },
     "extends": [
-        "plugin:vue/essential",
+        "plugin:vue/base",
         "standard"
     ],
     "parserOptions": {
@@ -17,5 +17,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "vue/valid-template-root": "error",
+        "no-multiple-empty-lines": "error"
     }
 }
