--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-vue": "^7.3.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0",
     "vite": "^1.0.0-rc.13"
   }
 }
