--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
         // 这样就可以对 `this` 上的数据属性进行更严格的推断`
         "strict": true,
         "jsx": "preserve",
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "isolatedModules": true
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "typings"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
